fix: wielkość scrollbaru

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,17 +18,15 @@
 }
 
 ::-webkit-scrollbar {
-  width: 1rem;
-  height: 1rem;
+  width: 15px;
+  height: 15px;
   background-color: transparent;
 
   &-track {
-    border-radius: 0.5em;
     background-color: #333;
   }
 
   &-thumb {
-    border-radius: 0.5em;
     background-color: #666;
   }
 }
@@ -47,7 +45,7 @@ body {
 
   &.no-scroll {
     overflow-y: hidden;
-    padding-right: 1rem;
+    padding-right: 15px;
 
     @include smallScreen() {
       padding: 0;
